# getop

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  hatch_build.py  pyproject.toml
.claude/agents/: discoveryengine-lister.md  logging-inspector.md  monitoring-stats.md  readonly-auditor.md
.claude/skills/bofh-review/: SKILL.md
.claude/skills/ge-api-drift/: SKILL.md
.github/: dependabot.yml
.github/workflows/: release-please.yml  release.yml  test.yml
geadm/: __init__.py  auth.py  main.py  render.py
geadm/commands/: armor.py  doctor.py  info.py  logs.py  ls.py  stats.py
getop/: __init__.py  auth.py  duration.py  main.py  render.py
getop/commands/: __init__.py  armor.py  config.py  doctor.py  info.py  logs.py  ls.py  stats.py  top.py
tests/: conftest.py  test_armor.py  test_cli.py  test_config.py  test_doctor.py  test_duration.py  test_info.py  test_logs.py  test_ls.py  test_readonly.py  test_render.py  test_stats.py  test_top.py
