[project]
name = "getop"
version = "1.4.0"
description = "CLI for Google Gemini Enterprise"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Egen" }]
maintainers = [{ name = "Andrew McKinney" }]
keywords = [
    "gemini-enterprise",
    "agentspace",
    "discovery-engine",
    "google-cloud",
    "cli",
    "observability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "google-cloud-discoveryengine>=0.13",
    "google-cloud-logging>=3.10",
    "google-cloud-monitoring>=2.21",
]

[project.urls]
Homepage = "https://github.com/egen/getop"
Repository = "https://github.com/egen/getop"
Issues = "https://github.com/egen/getop/issues"
Changelog = "https://github.com/egen/getop/blob/main/CHANGELOG.md"

[project.scripts]
getop = "getop.main:run"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["getop"]

[tool.hatch.build.targets.sdist]
# Ship only what a distro packager needs; dev tooling stays in the repo.
exclude = [".claude", ".github", ".gitignore", "AGENTS.md", "uv.lock"]
